# Gray

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README  README.md  bench_test.sh  rt.sh  set_gray_dir.sh
src/: CMakeLists.txt
src/Daq/: BlurFunctors.cpp  BlurProcess.cpp  CoincProcess.cpp  DaqModel.cpp  DeadtimeProcess.cpp  FilterFunctors.cpp  FilterProcess.cpp  Mapping.cpp  MergeFunctors.cpp  MergeProcess.cpp  Process.cpp  ProcessFactory.cpp  SortProcess.cpp
src/Graphics/: CameraView.cpp  Material.cpp  SceneDescription.cpp  TransformViewable.cpp  ViewableBase.cpp  ViewableBezierSet.cpp  ViewableCone.cpp  ViewableCylinder.cpp  ViewableEllipsoid.cpp  ViewableParallelepiped.cpp  ViewableParallelogram.cpp  ViewableSphere.cpp  ViewableTorus.cpp  ViewableTriangle.cpp
src/Gray/: Command.cpp  Config.cpp  File.cpp  GammaMaterial.cpp  GammaRayTrace.cpp  Load.cpp  LoadDetector.cpp  LoadMaterials.cpp  Simulation.cpp  Syntax.cpp  gray-daq.cpp  gray.cpp
src/KdTree/: DoubleRecurse.cpp  KdTree.cpp
src/Math/: Math.cpp
src/Output/: Detector.cpp  DetectorArray.cpp  IO.cpp  Input.cpp  Output.cpp
src/Physics/: BackBack.cpp  Beam.cpp  Compton.cpp  GammaStats.cpp  GaussianBeam.cpp  Interaction.cpp  Isotope.cpp  KleinNishina.cpp  NuclearDecay.cpp  Photon.cpp  Physics.cpp  Positron.cpp  Rayleigh.cpp  Thompson.cpp
src/Random/: Random.cpp  Transform.cpp
src/Sources/: AnnulusCylinderSource.cpp  AnnulusEllipticCylinderSource.cpp  CylinderSource.cpp  EllipsoidSource.cpp  EllipticCylinderSource.cpp  PointSource.cpp  RectSource.cpp  SourceList.cpp  SphereSource.cpp  VectorSource.cpp  VoxelSource.cpp
src/Viewer/: GlutRenderer.cpp  Viewer.cpp  gray-view.cpp
src/VrMath/: Aabb.cpp  LinearR2.cpp  LinearR3.cpp  LinearR4.cpp  PolygonClip.cpp  PolynomialRC.cpp  Quaternion.cpp
src/json/: jsoncpp.cpp
test/: CMakeLists.txt  sample_process_file.pdc  test_command.cpp  test_daq.cpp  test_daqmodel.py  test_epdl.py  test_file.cpp  test_gate.py  test_io.cpp  test_linear.cpp  test_load.cpp  test_mapping.cpp  test_math.cpp  test_nema.py  test_physics.cpp  test_random.cpp  test_source.cpp  test_string.cpp  test_syntax.cpp  test_transform.cpp  test_viewable.cpp  test_voxelsource.cpp
workspace/: CMakeLists.txt  buildGray.csh  buildGray_noclean.csh
workspace/DECODER/: DecodeGray.C
workspace/DataStructs/: Array.h  CLinkedList.h  CMakeLists.txt  DoubleRecurse.cpp  DoubleRecurse.h  KdTree.cpp  KdTree.h  PQueue.cpp  PQueue.h  ShellSort.h  Stack.h
workspace/Graphics/: BumpMapFunction.cpp  BumpMapFunction.h  CMakeLists.txt  CameraView.cpp  CameraView.h  DirectLight.cpp  DirectLight.h  Extents.cpp  Extents.h  Light.h  Material.cpp  Material.h  MaterialBase.h  MaterialCookTorrance.cpp  MaterialCookTorrance.h  PixelArray.cpp  PixelArray.h  RgbImage.cpp  RgbImage.h  TextureAffineXform.cpp  TextureAffineXform.h  TextureBilinearXform.cpp  TextureBilinearXform.h  TextureCheckered.cpp  TextureCheckered.h  TextureMapBase.cpp  TextureMapBase.h  TextureMultiFaces.cpp  TextureMultiFaces.h  TextureRgbImage.cpp  TextureRgbImage.h  TextureSequence.cpp  TextureSequence.h  TransformViewable.cpp  TransformViewable.h  View.h  ViewableBase.cpp  ViewableBase.h  ViewableBezierSet.cpp  ViewableBezierSet.h  (+17 more)
workspace/GraphicsTrees/: CMakeLists.txt
workspace/Gray/: 3ds.cpp  3ds.h  CMakeLists.txt  GammaRayTrace.cpp  GammaRayTrace.h  KdTree.cpp  KdTree.h  LoadDetector.cpp  LoadDetector.h  LoadMaterials.cpp  LoadMaterials.h  LoadNffFile.cpp  LoadNffFile.h  LoadObjFile.cpp  LoadObjFile.h  MaterialStack.cpp  MaterialStack.h  RatGeometry.cpp  RatGeometry.h  RayTraceSetup.cpp  RayTraceSetup.h  RayTraceStats.cpp  RayTraceStats.h  SceneDescription.cpp  SceneDescription.h  log_all.dff  main.cpp  model.h  package.sh  rt.sh
workspace/KdTree/: CMakeLists.txt
workspace/OpenGLRender/: CMakeLists.txt  GlutRenderer.cpp  GlutRenderer.h
workspace/Output/: BinaryFormat.h  CMakeLists.txt  Coincidence.cpp  Coincidence.h  Detector.cpp  Detector.h  DetectorArray.cpp  DetectorArray.h  Event.cpp  Event.h  EventBuffer.cpp  EventBuffer.h  Output.cpp  Output.h
workspace/OutputShared/: Output.cpp  Output.h
workspace/Physics/: BackBack.cpp  BackBack.h  Beam.cpp  Beam.h  CMakeLists.txt  Compton.cpp  Compton.h  Deposit.cpp  Deposit.h  F18.cpp  F18.h  GammaDecay.cpp  GammaDecay.h  GammaMaterial.h  GammaStats.cpp  GammaStats.h  IN110.cpp  IN110.h  Interaction.cpp  Interaction.h  InteractionList.cpp  InteractionList.h  Isotope.cpp  Isotope.h  LoadMaterials.cpp  LoadMaterials.h  MaterialStack.cpp  MaterialStack.h  NuclearDecay.cpp  NuclearDecay.h  Photon.cpp  Photon.h  Positron.cpp  Positron.h  PositronDecay.cpp  PositronDecay.h  ZR89.cpp  ZR89.h
workspace/Pipeline/: CMakeLists.txt
workspace/PixelArray/: CMakeLists.txt  OpenGlRgbImage.cpp  OpenGlRgbImage.h  PixelArray.cpp  PixelArray.h
workspace/Random/: CMakeLists.txt  Random.cpp  Random.h  mt19937.cpp  mt19937.h
workspace/RayTraceKd/: RayTraceKd.cpp  RayTraceSetup2.cpp  RayTraceStats.cpp  log_all.dff  package.csh  rt.csh  sphere.dff
workspace/RayTraceMgr/: LoadDetector.cpp  LoadDetector.h  LoadNffFile.cpp  LoadNffFile.h  LoadObjFile.cpp  LoadObjFile.h  SceneDescription.cpp  SceneDescription.h
workspace/Sources/: AnnulusCylinderSource.cpp  AnnulusCylinderSource.h  AnnulusEllipticCylinderSource.cpp  AnnulusEllipticCylinderSource.h  BeamPointSource.cpp  BeamPointSource.h  CMakeLists.txt  CylinderSource.cpp  CylinderSource.h  EllipsoidSource.cpp  EllipsoidSource.h  EllipticCylinderSource.cpp  EllipticCylinderSource.h  RectSource.cpp  RectSource.h  Source.h  SourceList.cpp  SourceList.h  SphereSource.cpp  SphereSource.h  VectorSource.cpp  VectorSource.h  VoxelSource.cpp  VoxelSource.h
workspace/Viewer/: CMakeLists.txt  GlutRenderer.cpp  GlutRenderer.h  Viewer.cpp  gray-view.cpp
workspace/VrMath/: Aabb.cpp  Aabb.h  CMakeLists.txt  LinearR2.cpp  LinearR2.h  LinearR3.cpp  LinearR3.h  LinearR4.cpp  LinearR4.h  MathMisc.h  Parallelepiped.cpp  Parallelepiped.h  PolygonClip.cpp  PolygonClip.h  PolynomialRC.cpp  PolynomialRC.h  Quaternion.cpp  Quaternion.h  VrData.h
workspace/gray/: gray.cpp  (+3 more)
(+652 files in other folders)
